Add updated files with headers
Added headers with questions associate to problem requirements

--- a/notebooks/1_quality.ipynb
+++ b/notebooks/1_quality.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -23,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -195,7 +193,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1292,7 +1289,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1304,6 +1300,13 @@
    "source": [
     "e nosso dataframe já está pronto para trabalharmos com ele! \n",
     "Vamos seguir com as tarefas: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pergunta 1"
    ]
   },
   {
@@ -1418,7 +1421,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1428,7 +1430,7 @@
     }
    },
    "source": [
-    "oi"
+    "### Pergunta 2"
    ]
   },
   {
@@ -1537,7 +1539,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1547,7 +1548,7 @@
     }
    },
    "source": [
-    "Curiosidade"
+    "### Pergunta 3"
    ]
   },
   {
@@ -1670,7 +1671,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1680,7 +1680,7 @@
     }
    },
    "source": [
-    "em"
+    "#### Pergunta 4"
    ]
   },
   {
@@ -1788,7 +1788,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1798,7 +1797,7 @@
     }
    },
    "source": [
-    "pessoa"
+    "#### Pergunta 5"
    ]
   },
   {
@@ -1903,7 +1902,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -1913,7 +1911,7 @@
     }
    },
    "source": [
-    "como"
+    "#### Pergunta 6"
    ]
   },
   {
@@ -2035,7 +2033,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2045,7 +2042,7 @@
     }
    },
    "source": [
-    "está?"
+    "#### Pergunta 7"
    ]
   },
   {
@@ -2200,7 +2197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2262,7 +2258,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2276,7 +2271,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2286,7 +2280,7 @@
     }
    },
    "source": [
-    "Você"
+    "#### Pergunta 1"
    ]
   },
   {
@@ -2418,6 +2412,8 @@
     "    from planes_view\n",
     "    \"\"\")\n",
     "qa_tailnum_df.show()\n",
+    "\n",
+    "\n",
     "#lets save it\n",
     "#qa_tailnum_df.write.parquet(\"output/qa_tailnum.parquet\")\n",
     "#we can check it too\n",
@@ -2445,7 +2441,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2455,7 +2450,7 @@
     }
    },
    "source": [
-    "De"
+    "#### Pergunta 2"
    ]
   },
   {
@@ -2557,7 +2552,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2567,7 +2561,7 @@
     }
    },
    "source": [
-    "Novo"
+    "#### Pergunta 3"
    ]
   },
   {
@@ -2673,7 +2667,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2683,7 +2676,7 @@
     }
    },
    "source": [
-    "Que"
+    "#### Pergunta 4"
    ]
   },
   {
@@ -2851,7 +2844,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -2861,7 +2853,7 @@
     }
    },
    "source": [
-    "Boa"
+    "#### Pergunta 5"
    ]
   },
   {
@@ -2997,7 +2989,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3007,7 +2998,7 @@
     }
    },
    "source": [
-    "Surpresa"
+    "#### Pergunta 6"
    ]
   },
   {
@@ -3112,7 +3103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3122,7 +3112,7 @@
     }
    },
    "source": [
-    "Ver você"
+    "#### Pergunta 7"
    ]
   },
   {
@@ -3227,7 +3217,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3237,7 +3226,7 @@
     }
    },
    "source": [
-    "por"
+    "#### Pergunta 8"
    ]
   },
   {
@@ -3342,7 +3331,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3352,7 +3340,7 @@
     }
    },
    "source": [
-    "aqui"
+    "#### Pergunta 9"
    ]
   },
   {
@@ -3511,7 +3499,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3528,7 +3515,7 @@
     "![Flight](attachment:./images/flight_snapshot.png \"Flyng plane\")\n",
     "<p style=\"text-align: center;\"> <a href=\"./glossary/flights_glossary.txt\"> Flight Glossary </a> </p>\n",
     "\n",
-    "Para este último dataset não faremos nada diferete:"
+    "Para este último dataset não faremos nada diferente:"
    ]
   },
   {
@@ -3618,7 +3605,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3630,8 +3616,14 @@
    "source": [
     "Para finalizar nosso trabalho, neste dataset temos tarefas a realizar que estão descritas a seguir:\n",
     "\n",
-    "\n",
-    "O que"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pergunta 1"
    ]
   },
   {
@@ -3752,7 +3744,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3762,7 +3753,7 @@
     }
    },
    "source": [
-    "Está"
+    "#### Pergunta 2"
    ]
   },
   {
@@ -3866,7 +3857,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3876,7 +3866,7 @@
     }
    },
    "source": [
-    "achando"
+    "#### Pergunta 3:"
    ]
   },
   {
@@ -3980,7 +3970,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -3990,7 +3979,7 @@
     }
    },
    "source": [
-    "do"
+    "#### Pergunta 4:"
    ]
   },
   {
@@ -4088,7 +4077,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4098,7 +4086,7 @@
     }
    },
    "source": [
-    "código"
+    "#### Pergunta 5:"
    ]
   },
   {
@@ -4198,7 +4186,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4208,7 +4195,7 @@
     }
    },
    "source": [
-    "até"
+    "#### Pergunta 6:"
    ]
   },
   {
@@ -4335,7 +4322,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4345,7 +4331,7 @@
     }
    },
    "source": [
-    "o"
+    "#### Pergunta 7:"
    ]
   },
   {
@@ -4446,7 +4432,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4456,7 +4441,7 @@
     }
    },
    "source": [
-    "momento,"
+    "#### Pergunta 8:"
    ]
   },
   {
@@ -4562,7 +4547,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4572,7 +4556,7 @@
     }
    },
    "source": [
-    "meu"
+    "#### Pergunta 9:"
    ]
   },
   {
@@ -4673,7 +4657,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4683,7 +4666,7 @@
     }
    },
    "source": [
-    "caro"
+    "#### Pergunta 10:"
    ]
   },
   {
@@ -4784,7 +4767,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -4794,7 +4776,7 @@
     }
    },
    "source": [
-    "curioso?"
+    "#### Pergunta 11:"
    ]
   },
   {
@@ -4958,6 +4940,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gerando arquivo parquet:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
@@ -4973,204 +4962,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# joining_dfs = airport_df.join(flights_df, ((airport_df.faa == flights_df.origin)), 'left')\\\n",
-    "#                         .join(planes_df, (planes_df.tailnum == flights_df.tailnum), 'left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# joining_dfs = joining_dfs.drop('tailnum', 'year')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11395"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "joining_dfs.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "AnalysisException: path file:/data/notebook_files/outputs1/joined_data_new.parquet already exists.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------",
-      "Traceback (most recent call last)",
-      "    at line 1 in <module>",
-      "    at line 885 in parquet(self, path, mode, partitionBy, compression)",
-      "    at line 1309 in __call__(self, *args)",
-      "    at line 117 in deco(*a, **kw)",
-      "AnalysisException: path file:/data/notebook_files/outputs1/joined_data_new.parquet already exists."
-     ]
-    }
-   ],
-   "source": [
-    "# joining_dfs.write.parquet('outputs1/joined_data_new.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# airport_qa = airport_df.drop('name', 'lat', 'lon', 'alt', 'tz', 'dst')\n",
-    "# planes_qa = planes_df.drop('year', 'type', 'manufacturer', 'model', 'engines', 'seats', 'speed', 'engine')\n",
-    "# flights_qa = flights_df.drop('year', 'month', 'day', 'dep_time', 'dep_delay', 'arr_time', 'arr_delay', 'carrier', 'flight', \n",
-    "#                              'air_time', 'distance', 'hour', 'minute')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# from pyspark.sql import functions as F\n",
-    "\n",
-    "# BD_qa_1 = flights_df.alias('fli').join(airport_df.alias('air'), \n",
-    "#                                  F.col('fli.origin') == F.col('air.faa'), 'left')\\\n",
-    "#                          .select(F.col(\"tailnum\"),\n",
-    "#                                 F.col('origin'),\n",
-    "#                                F.col('destiny'),\n",
-    "#                                F.col('faa'),\n",
-    "#                                F.col('year_month_day_qa'),\n",
-    "#                                F.col('hour_minute_qa'), \n",
-    "#                                F.col('dep_arr_time_qa'),\n",
-    "#                                F.col('dep_arr_delay_qa'),\n",
-    "#                                F.col('carrier_qa'),\n",
-    "#                                F.col('tailnum_qa'),\n",
-    "#                                F.col('flight_qa'),\n",
-    "#                                F.col('origin_dest_qa'),\n",
-    "#                                F.col('air_time_qa'),\n",
-    "#                                F.col('distance_qa'),\n",
-    "#                                F.col('distance_airtime_qa'),\n",
-    "#                                F.col('faa_qa').alias('ori_qa_faa'),\n",
-    "#                                F.col('name_qa').alias('ori_qa_name'),\n",
-    "#                                F.col('lat_qa').alias('ori_qa_lat'),\n",
-    "#                                F.col('lon_qa').alias('ori_qa_lon'),\n",
-    "#                                F.col('alt_qa').alias('ori_qa_alt'),\n",
-    "#                                F.col('tz_qa').alias('ori_qa_tz'),\n",
-    "#                                F.col('dst_qa').alias('ori_qa_dst'))\n",
-    "# BD_qa_1.show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Após feitas as transformações, vamos salvar nosso arquivo\n",
-    "#flights_df.write.parquet(\"output/flights_qa.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# all_dfs_join = airport_df.alias('a').join(flights_df.alias('b'),(airport_df['faa'] == flights_df['origin']),'left'\n",
-    "#             )\\\n",
-    "#            .join(planes_df.alias('c')).where(planes_df['tailnum'] == flights_df['tailnum'])\n",
-    "           \n",
-    "# df_to_export = all_dfs_join.drop(*('tailnum', 'year'))\n",
-    "# df_to_export.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "#df_to_export.write.parquet('outputs/all_join.parquet')"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -5186,22 +4977,6 @@
     " \n",
     "![Thanks](attachment:./images/text-1647627553578.png \"ThankU\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": false,
-     "hide_output_from_viewers": false,
-     "type": "CODE"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# joining_dfs.select('*').where(col('qa_seats').isNotNull()).show()"
-   ]
   }
  ],
  "metadata": {
@@ -5212,8 +4987,22 @@
    "packages": [],
    "version": 1
   },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
