--- a/notebooks/2_transformation.ipynb
+++ b/notebooks/2_transformation.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -437,7 +436,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -448,7 +446,7 @@
     }
    },
    "source": [
-    "Buenas"
+    "#### Pergunta 1"
    ]
   },
   {
@@ -553,7 +551,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -564,7 +561,7 @@
     }
    },
    "source": [
-    "tardes ou"
+    "#### Pergunta 2"
    ]
   },
   {
@@ -619,7 +616,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -630,7 +626,7 @@
     }
    },
    "source": [
-    "noches"
+    "#### Pergunta 3"
    ]
   },
   {
@@ -684,7 +680,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -695,7 +690,7 @@
     }
    },
    "source": [
-    "para"
+    "#### Pergunta 4"
    ]
   },
   {
@@ -758,7 +753,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -769,7 +763,7 @@
     }
    },
    "source": [
-    "Usted"
+    "#### Pergunta 5"
    ]
   },
   {
@@ -831,7 +825,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -842,7 +835,7 @@
     }
    },
    "source": [
-    "meu caro"
+    "#### Pergunta 6"
    ]
   },
   {
@@ -949,7 +942,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "datalore": {
@@ -960,7 +952,7 @@
     }
    },
    "source": [
-    "cumpadre"
+    "#### Pergunta 7"
    ]
   },
   {
@@ -1035,8 +1027,22 @@
    "packages": [],
    "version": 1
   },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
